--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,5 +35,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Mothers and daughters -- Fiction'
 - !lcc 'PR'
+- GITenberg
 title: Mary, Mary
 url: http://www.gutenberg.org/ebooks/24742
